Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24762

Regression: DashPattern drawing problem with thin lines

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.2
    • 4.8.0, 5.0.0, 5.0.1
    • GUI: Painting
    • Windows 7, Ubuntu 10.04, Ubuntu 12.04 64-bit

    Description

      This is regression on Qt 4.8. The attached example can be used to reproduce this issue.

      The lines that has Qt::DashLine set are not rendered correctly if another QGraphicsItem is drawn over the other.

      Steps to reproduce:
      1. Drag the box on top of the other and start dragging it slowly along the others borders (dragging diagonally also reproduces the error)

      What happens is that the dash lines becomes solid.

      Also if one moves the other box quickly on top of the other, the dash lines are not drawn evenly.

      Setting the cache mode to the QGraphicsItem can be used as a workaround.
      setCacheMode(QGraphicsItem::DeviceCoordinateCache);

      However this workaround uses a lot of RAM if lots of QGraphicsItems are used.

      Attachments

        For Gerrit Dashboard: QTBUG-24762
        # Subject Branch Project Status CR V

        Activity

          People

            rodal Samuel Rødal
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes