src/gui/painting/qpaintengine_raster_p.h
@@ -353,6 +353,7 @@ public:
 #endif
 
     QRect deviceRect;
+    QRect deviceRectUnclipped;
 
     QStroker basicStroker;
     QScopedPointer<QDashStroker> dashStroker;
